--- a/app/src/main/res/layout/fragment_registrar_alumno.xml
+++ b/app/src/main/res/layout/fragment_registrar_alumno.xml
@@ -7,32 +7,20 @@
     android:layout_height="match_parent"
     tools:context=".RegistrarAlumno">
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.754"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.899"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
-
     <Button
         android:id="@+id/btn_registrar"
-        android:layout_width="112dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="68dp"
+        android:layout_width="113dp"
+        android:layout_height="54dp"
+        android:layout_marginBottom="44dp"
         android:background="@color/red4"
-        android:text="REGISTRAR"
+        android:foreground="@drawable/ic__person_add"
+        android:foregroundGravity="fill_horizontal|top|bottom|center_vertical|clip_horizontal|center|fill_vertical|clip_vertical|right|center_horizontal"
+        android:freezesText="false"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.257"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textview_first" />
+        app:layout_constraintHorizontal_bias="0.231"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/txv_Titulo"
@@ -77,7 +65,7 @@
         android:id="@+id/txv_CorreoA"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CORREO DEL ALUMNO:"
+        android:text="CORREO ELECTRONICO DEL ALUMNO:"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -91,7 +79,9 @@
         android:layout_width="299dp"
         android:layout_height="49dp"
         android:ems="10"
+        android:gravity="center"
         android:inputType="textPersonName"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -103,6 +93,7 @@
         android:layout_width="299dp"
         android:layout_height="49dp"
         android:ems="10"
+        android:gravity="center"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -115,10 +106,12 @@
         android:layout_width="299dp"
         android:layout_height="49dp"
         android:ems="10"
+        android:gravity="center"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.768" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
