--- a/app/src/main/res/layout/fragment_realizar_matricula.xml
+++ b/app/src/main/res/layout/fragment_realizar_matricula.xml
@@ -106,4 +106,19 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.532" />
 
+    <Button
+        android:id="@+id/btn_Matricular"
+        android:layout_width="122dp"
+        android:layout_height="82dp"
+        android:layout_marginBottom="72dp"
+        android:background="@color/red4"
+        android:foreground="@android:drawable/ic_menu_save"
+        android:foregroundGravity="fill_horizontal|top|bottom|center_vertical|clip_horizontal|center|fill_vertical|clip_vertical|right|center_horizontal"
+        android:freezesText="false"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
