--- a/app/src/main/res/layout/fragment_ingresar_notas.xml
+++ b/app/src/main/res/layout/fragment_ingresar_notas.xml
@@ -20,4 +20,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.142" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        tools:layout_editor_absoluteX="177dp"
+        tools:layout_editor_absoluteY="509dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
