--- a/app/src/main/res/layout/fragment_realizar_matricula.xml
+++ b/app/src/main/res/layout/fragment_realizar_matricula.xml
@@ -108,12 +108,13 @@
 
     <Button
         android:id="@+id/btn_Matricular"
-        android:layout_width="122dp"
-        android:layout_height="82dp"
+        android:layout_width="187dp"
+        android:layout_height="65dp"
         android:layout_marginBottom="72dp"
+        android:text="@string/Guardar"
         android:background="@color/red4"
         android:foreground="@android:drawable/ic_menu_save"
-        android:foregroundGravity="fill_horizontal|top|bottom|center_vertical|clip_horizontal|center|fill_vertical|clip_vertical|right|center_horizontal"
+        android:foregroundGravity="top|bottom|clip_horizontal|right"
         android:freezesText="false"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
