--- a/app/src/main/res/layout/fragment_registrar_clase.xml
+++ b/app/src/main/res/layout/fragment_registrar_clase.xml
@@ -7,8 +7,23 @@
     android:layout_height="match_parent"
     tools:context=".RegistrarClase">
 
+    <Spinner
+        android:id="@+id/spinner_NClase"
+        android:layout_width="346dp"
+        android:layout_height="40dp"
+        android:layout_gravity="center"
+        android:background="@color/white"
+        android:padding="20dp"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.558"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.389" />
+
     <Button
-        android:id="@+id/btn_Matricular2"
+        android:id="@+id/btn_RegistrarClase"
         android:layout_width="122dp"
         android:layout_height="82dp"
         android:layout_marginBottom="40dp"
@@ -83,22 +98,9 @@
         app:layout_constraintVertical_bias="0.561" />
 
     <EditText
-        android:id="@+id/txt_nCuentaA2"
-        android:layout_width="299dp"
-        android:layout_height="49dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.562"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.382" />
-
-    <EditText
         android:id="@+id/txt_nCuentaA4"
-        android:layout_width="299dp"
-        android:layout_height="49dp"
+        android:layout_width="309dp"
+        android:layout_height="50dp"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
