--- a/app/src/main/res/layout/fragment_registrar_clase.xml
+++ b/app/src/main/res/layout/fragment_registrar_clase.xml
@@ -24,13 +24,14 @@
 
     <Button
         android:id="@+id/btn_RegistrarClase"
-        android:layout_width="122dp"
-        android:layout_height="82dp"
+        android:layout_width="167dp"
+        android:layout_height="87dp"
         android:layout_marginBottom="40dp"
         android:background="@color/red4"
-        android:foreground="@android:drawable/ic_menu_save"
-        android:foregroundGravity="fill_horizontal|top|bottom|center_vertical|clip_horizontal|center|fill_vertical|clip_vertical|right|center_horizontal"
+        android:foreground="@android:drawable/ic_menu_add"
+        android:foregroundGravity="top|bottom|clip_horizontal|right"
         android:freezesText="false"
+        android:text="@string/REGISTRAR"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
