--- a/app/src/main/res/layout/fragment_enviar_notas.xml
+++ b/app/src/main/res/layout/fragment_enviar_notas.xml
@@ -7,6 +7,33 @@
     android:layout_height="match_parent"
     tools:context=".EnviarNotas">
 
+    <EditText
+        android:id="@+id/txt_CorreoE"
+        android:layout_width="299dp"
+        android:layout_height="49dp"
+        android:ems="10"
+        android:gravity="center"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.36" />
+
+    <TextView
+        android:id="@+id/txv_CorreoE"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="CORREO ELECTRONICO DEL ALUMNO:"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.285" />
+
     <TextView
         android:id="@+id/txv_TituloEN"
         android:layout_width="204dp"
