--- a/app/src/main/res/layout/fragment_registrar_alumno.xml
+++ b/app/src/main/res/layout/fragment_registrar_alumno.xml
@@ -9,14 +9,18 @@
 
     <Button
         android:id="@+id/btn_registrar"
-        android:layout_width="113dp"
-        android:layout_height="54dp"
+        android:layout_width="154dp"
+        android:layout_height="61dp"
         android:layout_marginBottom="68dp"
         android:background="@color/red4"
         android:foreground="@drawable/ic__person_add"
-        android:foregroundGravity="fill_horizontal|top|bottom|center_vertical|clip_horizontal|center|fill_vertical|clip_vertical|right|center_horizontal"
+        android:foregroundGravity="fill_horizontal|left|bottom|center_vertical|clip_horizontal|center|clip_vertical|center_horizontal"
         android:freezesText="false"
+        android:gravity="center|start|right|top"
+        android:text="@string/REGISTRAR"
         android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.553"
