--- a/app/src/main/res/values/arreglo.xml
+++ b/app/src/main/res/values/arreglo.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="asignatus">
+
+    <string-array name="Materias">
         <item>Español</item>
         <item>Ingles I</item>
         <item>Algebra</item>
@@ -10,6 +11,4 @@
 
 
     </string-array>
-
-
 </resources>
